# IntelliAssistant

./: .gitignore  LICENSE  README.md  acb_usage_logs.jsonl  analysis_result.md  api.py  check_msft_data.py  check_schema.py  check_transactions.py  config.py  config.py.example  create_clients_table.py  data_analysis_framework_readme.md  data_visualization.py  datasets_response.json  enhanced_analysis.py  enhanced_analysis_summary.md  fix_execute_sql.py  framework_improvements.md  integration_instructions.md  main.py  package-lock.json  pyproject.toml  query_clients.py  query_db.py  requirements.txt  requirements_langgraph.txt  requirements_updated.txt  run.py  sample_visualizations.py  setup_github.bat  setup_github.sh  sql_diagnostics_summary.txt  start-servers.ps1  tesla_visualization.py  test-api.html  test-api.py  test_agent_sql.py  test_analysis_output.md  test_api.py  (+6 more)
.cursor/: mcp.json
.cursor/rules/: rule-claude-sonnet-37.mdc
.github/workflows/: python-app.yml
data/: acb_usage_logs.jsonl
frontend/: README.md  package-lock.json  package.json  start-frontend.ps1  tailwind.config.js
sample_data/: sales_data.csv
utils/: __init__.py  admin_logger.py  ai_cache.py  api_integrator.py  conversation_manager.py  data_processor.py  database_connector.py  enhanced_gemini_helper.py  file_handler.py  file_utils.py  gemini_helper.py  gemini_helper.py.backup  gemini_helper.py.old  gemini_helper_fixed.py  image_analyzer.py  openai_helper.py  schema_utils.py  sql_connector.py  sql_generation.py  visualization.py  visualization_helper.py  visualization_helper.py.bak
(+122 files in other folders)
